# voxcpm-rs

./: .gitignore  Cargo.toml  README.md  specs.md
.github/workflows/: publish.yml
examples/: bench_rmsnorm.rs  bf16_matacc.rs  bf16_probe.rs  cast_check.rs  clone.rs  dtype_check.rs  feat_check.rs  lm_check.rs  matmul_check.rs  tokcheck.rs  tts.rs  tts_stream.rs  vae_check.rs
patches/: README.md  burn-cubecl-bf16-acc.patch  cubecl-spirv-bf16-promote.patch  mesa-spirv-bf16-promote.patch
src/: audio.rs  config.rs  error.rs  fsq.rs  lib.rs  locenc.rs  tokenizer.rs  weights.rs
src/audiovae/: decoder.rs  encoder.rs  layers.rs  mod.rs  vae.rs
src/locdit/: local_dit.rs  mod.rs  unified_cfm.rs
src/minicpm4/: attention.rs  cache.rs  layer.rs  mlp.rs  mod.rs  model.rs  rope.rs
src/voxcpm2/: mod.rs  model.rs  wrapper.rs
