[package]
name = "voxcpm-rs"
version = "0.3.0"
edition = "2024"
rust-version = "1.85"
description = "Pure-Rust inference for VoxCPM2 on top of the Burn framework (Vulkan + CPU)."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/mii-nipah/voxcpm-rs"
homepage = "https://github.com/mii-nipah/voxcpm-rs"
documentation = "https://docs.rs/voxcpm-rs"
authors = ["nipah~✰! <mii_nipah@pm.me>"]
keywords = ["tts", "voxcpm", "speech", "audio", "inference"]
categories = ["multimedia::audio", "science"]
exclude = [
    "vendor/",
    "examples_tmp/",
    "target/",
    "/.git/",
    "*.wav",
]

[features]
default = ["cpu"]
# Vulkan / WGPU backend (primary target: AMD + NVIDIA via wgpu).
# Minimal build: fast cold start, ~5-7% slower steady-state.
wgpu = ["burn/wgpu"]
# Vulkan-only variant of `wgpu`: routes through cubecl-spirv instead of WGSL.
# Unlocks bf16 / f16 native types, cooperative-matrix (matrix cores) on RDNA3+
# and NVIDIA Ampere+, and other Vulkan-only extensions. Linux/Windows/Android
# only (no Metal, no WebGPU, no DX12).
vulkan = ["burn/wgpu", "burn/vulkan"]
# Opt-in perf: enables burn-cubecl-fusion (auto-fuses elementwise chains
# into single GPU kernels) and cubecl autotune (picks the best matmul
# kernel per shape). Gains ~5-7% steady-state RTF but pays a cold-start
# cost on the first 1-2 runs while cubecl measures kernels. Results are
# cached in `target/autotune/` and persist across runs.
# Tip: set `CUBECL_AUTOTUNE_LEVEL=minimal` at runtime to shrink the
# cold-start cost (uses a cheap heuristic instead of measuring).
wgpu-fast = ["wgpu", "burn/fusion", "burn/autotune"]
# Pure-CPU fallback using ndarray. SIMD speeds up elementwise ops; ndarray's
# native matmul is still single-threaded — enable `cpu-blas` (compiles a
# vendored OpenBLAS, no system deps required) for multi-core matmul.
cpu = ["burn/ndarray", "burn/simd"]
cpu-blas = ["cpu", "burn/openblas"]
# Convenience: enable both
all-backends = ["wgpu", "cpu"]

[dependencies]
burn = { version = "0.20.1", default-features = false, features = ["std"] }
burn-store = { version = "0.20.1", default-features = false, features = ["safetensors", "pytorch", "std"] }
safetensors = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
# HF tokenizer loader (reads tokenizer.json produced by LlamaTokenizerFast)
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }
# Audio I/O & resampling
hound = "3"
symphonia = { version = "0.5", features = ["all"] }
rubato = "0.15"
# Misc
half = "2"
log = "0.4"
bytemuck = "1"
memmap2 = "0.9"

[dev-dependencies]
approx = "0.5"
env_logger = "0.11"

[profile.release]
lto = "fat"
codegen-units = 1

# Local forks with bug fixes for native bf16 on the cubecl-spirv (Vulkan)
# path. See `patches/README.md` for full details. TL;DR:
#
# - burn-cubecl 0.20.1: direct conv kernels (forward and transposed)
#   accumulated sums in the element type `E`; for bf16 inputs this
#   collapses long reductions toward zero (audiovae's transposed convs
#   sum ~32k bf16 multiplies per output → silent audio). Fix: accumulate
#   in f32, cast back on store. See `patches/burn-cubecl-bf16-acc.patch`.
#
# - cubecl-spirv 0.9.0: adds an IR transformer that promotes bf16
#   arithmetic / comparison / plane / select ops to f32 before SPIR-V
#   emission, working around radv's broken NIR translation of generic
#   bf16 ops (only the special bfmul/bffma/bfdot intrinsics actually
#   work on mesa 25.2). See `patches/cubecl-spirv-bf16-promote.patch`.
#
# This patch block applies to OUR workspace. Downstream users that depend
# on voxcpm-rs and want the bf16 build must paste an equivalent block
# into THEIR own workspace root (cargo doesn't propagate [patch] from
# dependencies). They get the patched copies via a `git = ...` reference
# to this repo — see `patches/README.md` for the exact 3 lines.

[patch.crates-io]
burn-cubecl = { path = "vendor/patched/burn-cubecl" }
cubecl-spirv = { path = "vendor/patched/cubecl-spirv" }
